  * added possibility to describe repository for Artifact Evaluation
    using flag --describe (see http://cTuning.org/ae), i.e.
    ck add repo:my-artifact-pack --describe
  * return 16 when adding new entry (including repository) and it already exists
  * added often used 'load_yaml_file' and 'save_yaml_to_file' functions to kernel
  * changing yaml.dump to yaml.safe_dump

* V1.7.1
  * fixing detection of CK installation even when ck is soft linked
  * changing remote-ck repo URL pointing to cknowledge.org 
    (after moving personal CK server to Azure cloud)
  * adding support for basic http authentication for remote repositories
  * adding automatic recaching of repositories if has remote access ...
  * adding support to automatically open web service and browser via
    "ck browser" (or "ck browser --template=<template>" with a given web template)
    similar to ipython notebook
  * adding possibility to open a given entry in a browser via
    "ck browser test:unicode" or browse entries via
    "ck browser dataset:" ...
  * fixing CK server vulnerability (action with ; can run various CMD commands)
  * fixing above vulnerability both in php and python ...

* V1.6.15
  * adding mode to skip tmp files/directories when downloading entry
  * fixing bug in entry downloader
  * adding __version__ to CK kernel
  * providing URLs where to download Git and Python for installation
  * automatically extracting repo name from URL string when pulling repos from GitHub via --url
  * added action 'show' to 'repo' module to be able to open browser 
    with an URL of a shared repository. For example, 'ck show repo:ck-autotuning'
  * Adding support function to get value from list without error if out of bounds (useful for sorting)
  * Before updating kernel from GitHub, check that it's a Git installation (noticed by Abdul Memon)

* V1.6.14
  * forgot to add cfg module to setup.py (preferred to generate new version)

* V1.6.13