@@ -8,7 +8,8 @@
     ck add repo:my-artifact-pack --describe
   * return 16 when adding new entry (including repository) and it already exists
   * added often used 'load_yaml_file' and 'save_yaml_to_file' functions to kernel
-  * changing yaml.dump to yaml.safe_dump
+  * changed yaml.dump to yaml.safe_dump
+  * added --install option to "ck pull all (--kernel)" to install CK kernel as python module
 
 * V1.7.1
   * fixing detection of CK installation even when ck is soft linked
